fix(list and table): Spacing fixed
- Fixed spacing of lists and tables

--- a/themes/hugo-docs/assets/elements/article.scss
+++ b/themes/hugo-docs/assets/elements/article.scss
@@ -21,5 +21,9 @@
       max-width: 100%;
       height: auto;
     }
+
+    hr {
+      border-bottom: 4px solid $color-grey-6;
+    }
   }
 }
