--- a/themes/hugo-docs/assets/elements/general.scss
+++ b/themes/hugo-docs/assets/elements/general.scss
@@ -30,11 +30,6 @@ a {
 
 b,
 strong,
-label,
-th {
+label {
   font-weight: 500;
-}
-
-hr {
-  border-bottom: 4px solid $color-grey-6;
 }
